add subdomain support

--- a/.conf/includes/localtest.me.conf
+++ b/.conf/includes/localtest.me.conf
@@ -1,6 +1,6 @@
 server {
   listen *:80;
-  server_name ~^(www\.)?(?<domain>.+).localtest.me$ ;
+  server_name ~^(?<subdomain>.+\.)?(?<domain>.+).localtest.me$;
   root /var/www/projects/$domain/public_html/;
 
   include conf.d/dockerhero/core/partials/logging.conf;
@@ -21,7 +21,7 @@ server {
 
 server {
   listen *:443 ssl;
-  server_name ~^(www\.)?(?<domain>.+).localtest.me$ ;
+  server_name ~^(?<subdomain>.+\.)?(?<domain>.+).localtest.me$;
   root /var/www/projects/$domain/public_html/;
 
   include conf.d/dockerhero/core/partials/logging-ssl.conf;
