--- a/.conf/partials/php.conf
+++ b/.conf/partials/php.conf
@@ -8,7 +8,7 @@ location ~ \.php {
     fastcgi_read_timeout 600;
     fastcgi_send_timeout 600;
     fastcgi_param PHP_VALUE "max_execution_time=600";
-    fastcgi_param PHP_VALUE "upload_max_filesize=8M";
+    fastcgi_param PHP_VALUE "upload_max_filesize = 64M \n post_max_size=64M";
 
     fastcgi_ignore_client_abort on;
     fastcgi_intercept_errors off;
