make both public and public_html folders work

--- a/.conf/includes/localtest.me.conf
+++ b/.conf/includes/localtest.me.conf
@@ -1,7 +1,19 @@
 server {
   listen *:80;
   server_name ~^(?<subdomain>.+\.)?(?<domain>.+).localtest.me$;
-  root /var/www/projects/$domain/public_html/;
+
+  set $baseRoot "/var/www/projects/${domain}";
+  set $publicFolder "";
+
+  if (-d "${baseRoot}/public_html") {
+      set $publicFolder "public_html";
+  }
+
+  if (-d "${baseRoot}/public") {
+      set $publicFolder "public";
+  }
+
+  root "${baseRoot}/${publicFolder}";
 
   include conf.d/dockerhero/core/partials/logging.conf;
 
@@ -18,7 +30,19 @@ server {
 server {
   listen *:443 ssl;
   server_name ~^(?<subdomain>.+\.)?(?<domain>.+).localtest.me$;
-  root /var/www/projects/$domain/public_html/;
+
+  set $baseRoot "/var/www/projects/${domain}";
+  set $publicFolder "";
+
+  if (-d "${baseRoot}/public_html") {
+      set $publicFolder "public_html";
+  }
+
+  if (-d "${baseRoot}/public") {
+      set $publicFolder "public";
+  }
+
+  root "${baseRoot}/${publicFolder}";
 
   include conf.d/dockerhero/core/partials/logging-ssl.conf;
   include conf.d/dockerhero/core/partials/ssl.conf;
