--- a/.conf/includes/localtest.me.conf
+++ b/.conf/includes/localtest.me.conf
@@ -12,6 +12,10 @@ server {
   if (-d "${baseRoot}/public") {
       set $publicFolder "public";
   }
+  
+  if (-d "${baseRoot}/html") {
+      set $publicFolder "html";
+  }
 
   root "${baseRoot}/${publicFolder}";
 
